# 8ball

./: README.md
.circleci/: config.yml
agents/c#/: .gitignore  Program.cs  Startup.cs  c#.csproj  start.sh
agents/c#/Controllers/: AnswerController.cs
agents/c#/Properties/: launchSettings.json
agents/commonlisp/eightball/: build.sh  eightball.asd  eightball.sublime-project  eightball.sublime-workspace  run.lisp  test.conf  working.lisp
agents/elixir/: README.md  mix.exs  start.sh
agents/elixir/jp/: .gitignore
agents/elixir/lib/: eightball_agent_web.ex
agents/elixir/test/: test_helper.exs
agents/f#/: Answer.fs  Program.fs  Startup.fs  WeatherForecast.fs  f#.fsproj  f#.sln  start.sh
agents/f#/Controllers/: AnswerController.fs  WeatherForecastController.fs
agents/f#/Properties/: launchSettings.json
agents/go/: agent.go  start.sh
agents/haskell/magic-8ball/: README.md  magic-8ball.cabal
agents/haskell/magic-8ball/src/: Magic8Ball.hs  Main.hs
agents/java/: start.sh
agents/java/agent/: build.gradle
agents/nodejs/jp/: .gitignore  index.js  package.json
agents/python/: agent.py  start.sh
agents/ruby/: agent.rb  start.sh
agents/rust/wb/: Cargo.toml
agents/rust/wb/src/: answer.rs  main.rs
agents/scala/: start.sh
agents/scala/agent/: .gitignore  build.sbt
agents/static/jp/: answer
docs/: README.md
hub/: .gitignore  Dockerfile  hub.go
hub/config/: agents.yml
hub/model/: agent.go  error.go  hubResponse.go  request.go  response.go
hub/public/: index.html
web/: package.json
web/public/: index.html
web/src/: constants.js  index.js  responses.js  strategies.js
(+56 files in other folders)
