name:                magic-8ball
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/magic-8ball#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable magic-8ball
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       random,
                       aeson,
                       servant-server,
                       servant-client,
                       unordered-containers,
                       wai,
                       async,
                       stm,
                       wai-logger,
                       warp,
                       http-client
