[package]
name = "eightball_pessimist"
version = "0.1.0"
authors = ["Will Burklund <waburklund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
rand = "0.7.2"
rusoto_comprehend = "0.41.0"
rusoto_core = "0.41.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
simple_logger = "1.3.0"
